# statstonk

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TODO.md  config.py  db.py  docker-compose.yml  pyproject.toml  requirements.txt
alerts/: __init__.py  telegram.py
analytics/: __init__.py  calibration.py  picks.py  prematch.py  signals.py
dashboard/: app.py  components.py
dashboard/pages/: 0_live.py  1_prossime_partite.py  2_pronostici.py
models/: __init__.py  lineups.py  matches.py  picks.py  players.py  teams.py
scheduler/: __init__.py  alerts.py  jobs.py  runner.py
scrapers/: __init__.py  base.py  football_data_co.py  sofascore.py
